--- a/packages/ui/src/fields/Relationship/index.css
+++ b/packages/ui/src/fields/Relationship/index.css
@@ -36,5 +36,9 @@
 
   .relationship.error > .relationship__wrap .rs__control {
     border-color: var(--border-danger-strong);
+
+    &:hover {
+      border-color: var(--border-danger-strong);
+    }
   }
 }
